src/objects/Employee__c.object
<CustomObject>
    <description>Employee</description>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Employee_Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee_Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Account_avs</label>
        <referenceTo>Account_avs__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>